--- a/src/App.scss
+++ b/src/App.scss
@@ -1,26 +1,12 @@
-/* fonts */
-@font-face {
-  font-family: Neue Haas Grotesk Display Pro Light;
-  src: url(./assets/fonts/neue-haas-grotesk-display-pro-cufonfonts/NeueHaasDisplayLight.ttf);
-}
-
-@font-face {
-  font-family: Neue Haas Grotesk Display Pro Thin;
-  src: url(./assets/fonts/neue-haas-grotesk-display-pro-cufonfonts/NeueHaasDisplayThin.ttf);
-}
+@use './styles/partials/resets' as *;
 
 @keyframes sectionSlideUp {
   0% {
     transform: translateY(10%);
-    
   }
   100% {
     transform: translateY(0);
   }
-}
-
-* {
-  font-family: Neue Haas Grotesk Display Pro Thin;
 }
 
 .App {
@@ -30,8 +16,10 @@
   flex-direction: column;
   align-items: center;
   transition: 1s;
-  background-color: #EEE7E7;
+  background-color: white;
   color: black;
+  overflow-x: hidden;
+
   /* background: linear-gradient(to right bottom,
    rgba(255,255,255,.7),
    rgba(255,255,255,.3)); */
@@ -46,47 +34,41 @@
   transition: 1s;
   color: white;
   background-color: #111818;
+  max-width: 1050px;
   /* background: linear-gradient(to right bottom,
    rgba(255,255,255,.7),
    rgba(255,255,255,.3)); */
 }
 
 .portfolio-container {
-  width: 55%;
   max-width: 1050px;
   display: flex;
   flex-direction: column;
   position: relative;
 }
 
-.nav{
-  width: 55%;
-  max-width: 1050px;
-  position: fixed;
-  margin-top: 50px;
-  z-index: 2;
-}
+// *******
 
 .hero-header {
   margin-top: 10vh;
 }
 
-.line{
-  border: 0.5px solid #B8B8B8;
+.line {
+  border: 0.5px solid #b8b8b8;
   width: 10%;
   margin-top: 10vh;
   margin-bottom: 10px;
 }
 
-.line-in-view{
-  border: 0.5px solid #B8B8B8;
+.line-in-view {
+  border: 0.5px solid #b8b8b8;
   width: 100%;
   transition: 0.5s ease-in;
   margin-top: 10vh;
   margin-bottom: 10px;
 }
 
-.projects-section{
+.projects-section {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -132,67 +114,63 @@
   background-color: black;
 }
 
-.footer-wrapper{
+.footer-wrapper {
   width: 55%;
   max-width: 1050px;
-
 }
 
-@media screen and (max-width: 480px) { 
+// @media screen and (max-width: 480px) {
+//   .portfolio-container {
+//     display: flex;
+//     flex-direction: column;
+//     position: relative;
+//   }
 
-  .portfolio-container {
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-  }
+//   .nav {
+//     width: 80%;
+//     position: fixed;
+//     margin-top: 50px;
+//     z-index: 2;
+//   }
 
-  .nav{
-    width: 80%;
-    position: fixed;
-    margin-top: 50px;
-    z-index: 2;
-  }
+//   .hero-header {
+//     margin-top: 150px;
+//   }
 
-  .hero-header {
-    margin-top: 150px;
-  }
+//   .footer-section {
+//     height: 368px;
+//     margin-top: 100px;
+//   }
 
-  .footer-section {
-    height: 368px;
-    margin-top: 100px;
-  }
-  
-  .footer-wrapper{
-    width: 80%;
-    padding-top: 20px;
-  }
-  
-}
+//   .footer-wrapper {
+//     width: 80%;
+//     padding-top: 20px;
+//   }
+// }
 
-@media (min-width: 481px) and (max-width: 1200px) {
-  .portfolio-container {
-    width: 65%;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-  }
+// @media (min-width: 481px) and (max-width: 1200px) {
+//   .portfolio-container {
+//     width: 65%;
+//     display: flex;
+//     flex-direction: column;
+//     position: relative;
+//   }
 
-  .nav{
-    width: 65%;
-    position: fixed;
-    margin-top: 50px;
-    z-index: 2;
-  }
-}
+//   .nav {
+//     width: 65%;
+//     position: fixed;
+//     margin-top: 50px;
+//     z-index: 2;
+//   }
+// }
 
-@media (min-width: 481px) and (max-width: 750px) {
-  .footer-section {
-    height: 368px;
-    margin-top: 100px;
-  }
-  
-  .footer-wrapper{
-    padding-top: 20px;
-  }
-}
+// @media (min-width: 481px) and (max-width: 750px) {
+//   .footer-section {
+//     height: 368px;
+//     margin-top: 100px;
+//   }
+
+//   .footer-wrapper {
+//     padding-top: 20px;
+//   }
+// }
