--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -1,89 +1,192 @@
-@keyframes slideInFromBottom {
-  0% {
-    transform: translateY(100%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
+@use '../../styles//partials/breakpoints' as *;
+@use '../../styles//partials/fonts' as *;
 
-.about-me-container {
-  display: flex;
-  flex-direction: column;
-}
+.about {
+  display: grid;
+  margin-top: 5rem;
 
-.about-title {
-  font-size: 36px;
-}
-
-.about-title-in-view {
-  font-size: 36px;
-  animation: slideInFromBottom 0.5s ease-in;
-}
-
-.about-me-bottom {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.about-me-copy {
-  width: 30%;
-  font-size: 24px;
-}
-
-.portrait-photo {
-  height: 292px;
-  width: 292px;
-  border-radius: 10px;
-  z-index: 1;
-}
-
-.overlapping-pictures {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.background-block {
-  height: 292px;
-  width: 292px;
-  background-color: #efaf4e;
-  border-radius: 10px;
-  margin-left: -250px;
-  margin-top: 70px;
-}
-
-@media screen and (max-width: 1200px) {
-  .about-me-mobile-container {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .portrait-photo {
-    height: 200px;
-    width: 200px;
-    border-radius: 10px;
-    z-index: 1;
-  }
-
-  .background-block {
-    height: 200px;
-    width: 200px;
-    background-color: #efaf4e;
-    border-radius: 10px;
-    margin-left: -160px;
-    margin-top: 70px;
-  }
-
-  .about-me-mobile-bottom {
-    margin-top: 20px;
-  }
-
-  .about-me-copy {
+  &__div-stagger {
     width: 100%;
-    font-size: 24px;
+    height: auto;
+    max-height: 700px;
+    position: relative;
+  }
+
+  &__portrait {
+    width: 100%;
+    max-height: 700px;
+    height: auto;
+    object-fit: cover;
+    position: relative;
+    z-index: 99;
+  }
+
+  &__stagger1 {
+    width: 100%;
+    height: 100%;
+    max-height: 700px;
+    background-color: #c6d9d1;
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    transform: translate(-30px, 30px);
+  }
+
+  &__stagger2 {
+    width: 100%;
+    height: 100%;
+    max-height: 700px;
+    background-color: #f0fcf5;
+    position: absolute;
+    top: 0;
+    z-index: 0;
+    transform: translate(-60px, 60px);
+  }
+
+  &__header {
+    font-family: "Plus Jakarta Medium";
+    font-weight: 700;
+    margin-bottom: 4rem;
+  }
+
+  &__desc,
+  &__desc2 {
+    font-family: "Plus Jakarta Regular";
+    margin-top: 1rem;
+    line-height: 2rem;
   }
 }
+
+@include small() {
+  .about {
+    grid-template-columns: 1fr;
+    padding: 0rem 1rem;
+
+    &__stagger1,
+    &__stagger2 {
+      display: none;
+    }
+
+    &__header {
+      font-size: 1.5rem;
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+    }
+  }
+}
+
+@include medium() {
+  .about {
+    grid-template-columns: 45% 40%;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 0rem 8rem;
+
+    &__header {
+      font-size: 1.5rem;
+    }
+  }
+}
+
+@include large() {
+  .about {
+    grid-template-columns: 45% 40%;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0rem;
+
+    &__header {
+      font-size: 1.5rem;
+    }
+  }
+}
+
+// @keyframes slideInFromBottom {
+//   0% {
+//     transform: translateY(100%);
+//     opacity: 0;
+//   }
+//   100% {
+//     transform: translateY(0);
+//     opacity: 1;
+//   }
+// }
+
+// .about-me-container {
+//   display: flex;
+//   flex-direction: column;
+// }
+
+// .about-title {
+//   font-size: 36px;
+// }
+
+// .about-title-in-view {
+//   font-size: 36px;
+//   animation: slideInFromBottom 0.5s ease-in;
+// }
+
+// .about-me-bottom {
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+// }
+
+// .about-me-copy {
+//   width: 30%;
+//   font-size: 24px;
+// }
+
+// .portrait-photo {
+//   height: 292px;
+//   width: 292px;
+//   border-radius: 10px;
+//   z-index: 1;
+// }
+
+// .overlapping-pictures {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
+
+// .background-block {
+//   height: 292px;
+//   width: 292px;
+//   background-color: #efaf4e;
+//   border-radius: 10px;
+//   margin-left: -250px;
+//   margin-top: 70px;
+// }
+
+// @media screen and (max-width: 1200px) {
+//   .about-me-mobile-container {
+//     display: flex;
+//     flex-direction: column;
+//   }
+
+//   .portrait-photo {
+//     height: 200px;
+//     width: 200px;
+//     border-radius: 10px;
+//     z-index: 1;
+//   }
+
+//   .background-block {
+//     height: 200px;
+//     width: 200px;
+//     background-color: #efaf4e;
+//     border-radius: 10px;
+//     margin-left: -160px;
+//     margin-top: 70px;
+//   }
+
+//   .about-me-mobile-bottom {
+//     margin-top: 20px;
+//   }
+
+//   .about-me-copy {
+//     width: 100%;
+//     font-size: 24px;
+//   }
+// }
