--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -10,3 +10,10 @@
   align-items: center;
   font-weight: 700;
 }
+
+.button-container--dark {
+  @extend .button-container;
+
+  background-color: white;
+  color: black;
+}
