--- a/src/components/ProjectsSection/ProjectSection.scss
+++ b/src/components/ProjectsSection/ProjectSection.scss
@@ -3,6 +3,9 @@
 .project-section {
   &__project-list {
     margin-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 5rem;
   }
 }
 
