--- a/src/components/HeroHeader/HeroHeader.scss
+++ b/src/components/HeroHeader/HeroHeader.scss
@@ -58,7 +58,7 @@
 .hero {
   display: flex;
   flex-direction: column;
-  margin-top: 10rem;
+
   height: 80vh;
   position: relative;
 
@@ -66,6 +66,10 @@
     display: block;
     opacity: 0;
     animation: fade 0.01s ease-out 1.75s forwards;
+  }
+
+  &__span-block {
+    display: block;
   }
 
   &__emoji {
@@ -105,6 +109,7 @@
   &__sub-copy {
     font-size: 1.2rem;
     margin-top: 3rem;
+    margin-bottom: 2rem;
   }
 
   &__bold-span {
@@ -121,6 +126,7 @@
 @include small() {
   .hero {
     padding: 0rem 1rem;
+    margin-top: 7rem;
     &__top {
       &__copy {
         font-size: 2rem;
@@ -131,6 +137,7 @@
 @include medium() {
   .hero {
     padding: 0rem 2rem;
+    margin-top: 10rem;
     &__copy {
       font-size: 4rem;
     }
@@ -139,6 +146,7 @@
 @include large() {
   .hero {
     padding: 0rem 0rem;
+    margin-top: 10rem;
     &__copy {
       font-size: 4rem;
     }
