--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,111 +1,120 @@
-.footer-container {
+@use '../../styles/partials/breakpoints' as *;
+@use '../../styles/partials/fonts' as *;
+
+.footer {
+  width: 100%;
+  min-height: 263px;
+  background-color: #111818;
   display: flex;
   flex-direction: column;
-}
-
-.footer-nav-buttons {
-  width: 360px !important;
-  display: flex;
-  justify-content: space-between;
-}
-
-.footer-nav-buttons * {
-  font-size: 16px;
-  color: white;
-}
-
-.my-name {
-  font-size: 40px;
-  margin: 0;
-  margin-bottom: 10px;
-  color: white;
-}
-
-.bottom-footer-row {
-  display: flex;
-  justify-content: space-between;
-}
-
-.bottom-footer-row > p {
-  font-size: 24px;
-  margin: 0;
-  letter-spacing: 2px;
-  margin-top: 5px;
-  color: white;
-}
-
-.social-media-btns {
-  width: 150px;
-  display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
-}
+  color: white;
+  font-family: 'Nueu Hass Light';
 
-.social-media-btns > img {
-  height: 32px;
-  width: 32px;
-}
-
-.social-media-btns > :last-child {
-  height: 16px;
-  width: 16px;
-}
-
-.footer-line {
-  width: 100%;
-  border-top: 1px solid white;
-  margin-top: 15px;
-}
-
-@media screen and (max-width: 750px) {
-  .footer-nav-buttons {
+  &__max-width {
     display: flex;
     flex-direction: column;
+    position: relative;
+    width: 100%;
+    max-width: 1280px;
   }
-
-  .footer-nav-buttons * {
-    font-size: 16px;
-    margin: 0;
-    margin-top: 10px;
-  }
-
-  .my-name {
-    align-self: flex-end;
-    font-size: 16px;
-    margin-bottom: 0px;
-    letter-spacing: 2px;
-    margin-top: 10px;
-  }
-
-  .bottom-footer-row {
+  &__nav-buttons {
     display: flex;
-    flex-direction: column;
-    align-self: flex-end;
+    column-gap: 5rem;
+    margin-bottom: 1rem;
+
+    p {
+      color: white;
+    }
   }
 
-  .bottom-footer-row > p {
-    font-size: 16px;
-    margin: 0;
-    letter-spacing: 2px;
-    margin-top: 5px;
+  &__line {
+    width: 100%;
+    border-top: 1px solid white;
+    margin-top: 15px;
   }
 
-  .social-media-btns {
-    width: 120px;
+  &__bottom {
     display: flex;
-    justify-content: space-between;
+
+    p {
+      letter-spacing: 2px;
+    }
+  }
+
+  &__buttons {
+    display: flex;
     align-items: center;
-    align-self: flex-end;
-    margin-top: 40px;
+    justify-content: space-between;
   }
+}
 
-  .social-media-btns > img {
-    height: 24px;
-    width: 24px;
+@include small() {
+  .footer {
+    padding: 2rem 1rem;
+
+    &__nav-buttons {
+      flex-direction: column;
+      row-gap: 1rem;
+    }
+
+    &__name {
+      align-self: flex-end;
+      margin-bottom: 0.5rem;
+    }
+
+    &__bottom {
+      flex-direction: column;
+      align-items: flex-end;
+    }
+
+    &__buttons {
+      margin-top: 2rem;
+      column-gap: 2rem;
+    }
   }
+}
 
-  .social-media-btns > :last-child {
-    height: 18px;
-    width: 18px;
+@include medium() {
+  .footer {
+    padding: 0 2rem;
+    &__name {
+      font-size: 40px;
+      margin-bottom: 1rem;
+    }
+
+    &__bottom {
+      justify-content: space-between;
+
+      p {
+        font-size: 1.8rem;
+      }
+    }
+
+    &__buttons {
+      column-gap: 2rem;
+    }
+  }
+}
+
+@include large() {
+  .footer {
+    &__name {
+      font-size: 40px;
+      margin-bottom: 1rem;
+    }
+
+    &__bottom {
+      justify-content: space-between;
+
+      p {
+        font-size: 1.8rem;
+      }
+    }
+
+    &__buttons {
+      column-gap: 2rem;
+    }
   }
 }
