--- a/src/styles/partials/_fonts.scss
+++ b/src/styles/partials/_fonts.scss
@@ -8,3 +8,8 @@
   font-family: Plus Jakarta Medium;
   src: url('../../assets/fonts/plus-jarkata-sans/PlusJakartaSans-Medium.ttf');
 }
+
+@font-face {
+  font-family: Nueu Hass Light;
+  src: url('../../assets/fonts/neue-haas-grotesk-display-pro-cufonfonts/NeueHaasDisplayLight.ttf');
+}
