--- a/src/components/HeroHeader/HeroHeader.scss
+++ b/src/components/HeroHeader/HeroHeader.scss
@@ -10,7 +10,7 @@
   50% {
     right: 0;
     left: 0;
-    width: 75%;
+    width: 100%;
   }
   100% {
     right: 0;
@@ -80,18 +80,18 @@
     margin-bottom: 2rem;
   }
 
-  &__top {
+  &__animation-container {
     width: fit-content;
     position: relative;
     &::after {
       display: block;
-      content: "";
+      content: '';
       position: absolute;
       top: 0;
       left: 0;
       right: 100%;
       width: 0%;
-      height: 54%;
+      height: 100%;
       background-color: black;
       animation: swipe 1.5s ease-out 1s forwards;
     }
