added dark mode color to slide out

--- a/src/components/MenuSlideOut/MenuSlideOut.scss
+++ b/src/components/MenuSlideOut/MenuSlideOut.scss
@@ -32,6 +32,14 @@
   }
 }
 
+.menu--dark {
+  @extend .menu;
+  background-color: #111818;
+  p {
+    color: white;
+  }
+}
+
 .menu--closed {
   @extend .menu;
   right: -100%;
